--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -31,7 +31,7 @@
   "app-menu-random-topic-key": "willekeurig onderwerp",
   "app-menu-compare-topics": "vergelijk onderwerpen",
   "app-menu-toggle-fullscreen": "volledig scherm activeren",
-  "app-menu-bookmark-actions": "bladwijzerselectieacties",
+  "app-menu-bookmark-actions": "bladwijzer selectie acties",
   "app-menu-bookmark-actions-reasoning": "redenering",
   "app-menu-import-as": "bladwijzers importeren",
   "app-menu-export-as": "bladwijzers exporteren",
