--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "انتقل إلى الجزء السابق",
   "app-menu-new-search": "بحث جديد",
   "app-menu-structured-search": "بحث منظم",
-  "app-menu-geo-search": "البحث الجغرافي",
+  "app-menu-geographic-search": "البحث الجغرافي",
   "app-section-main": "رئيسي",
   "app-section-info": "معلومات",
   "app-section-library": "مكتبة",
