--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "আগের প্যানে যান",
   "app-menu-new-search": "নতুন অনুসন্ধান",
   "app-menu-structured-search": "কাঠামোগত অনুসন্ধান",
-  "app-menu-geo-search": "জিও অনুসন্ধান",
+  "app-menu-geographic-search": "জিও অনুসন্ধান",
   "app-section-main": "প্রধান",
   "app-section-info": "তথ্য",
   "app-section-library": "লাইব্রেরি",
