--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -7,7 +7,7 @@
   "app-tab-help-title": "helfen",
   "app-tab-audio-chat-title": "Audio-Chat",
   "app-search-placeholder": "suchen",
-  "app-menu-geo-search": "geo search",
+  "app-menu-geographic-search": "geo search",
   "app-menu-features": "features",
   "app-menu-nature-location-quiz": "nature location quiz",
   "app-menu-structured-search": "Strukturierte Suche",
