--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "ir al panel anterior",
   "app-menu-new-search": "nueva búsqueda",
   "app-menu-structured-search": "búsqueda estructurada",
-  "app-menu-geo-search": "búsqueda geográfica",
+  "app-menu-geographic-search": "búsqueda geográfica",
   "app-section-main": "principal",
   "app-section-info": "información",
   "app-section-library": "biblioteca",
