--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "به صفحه قبلی بروید",
   "app-menu-new-search": "جستجوی جدید",
   "app-menu-structured-search": "جستجوی ساختار یافته",
-  "app-menu-geo-search": "جستجوی جغرافیایی",
+  "app-menu-geographic-search": "جستجوی جغرافیایی",
   "app-section-main": "اصلی",
   "app-section-info": "اطلاعات",
   "app-section-library": "کتابخانه",
