--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "pergi ke panel sebelumnya",
   "app-menu-new-search": "pencarian baru",
   "app-menu-structured-search": "pencarian terstruktur",
-  "app-menu-geo-search": "pencarian geografis",
+  "app-menu-geographic-search": "pencarian geografis",
   "app-section-main": "utama",
   "app-section-info": "info",
   "app-section-library": "perpustakaan",
