--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "vai al riquadro precedente",
   "app-menu-new-search": "nuova ricerca",
   "app-menu-structured-search": "ricerca strutturata",
-  "app-menu-geo-search": "ricerca geografica",
+  "app-menu-geographic-search": "ricerca geografica",
   "app-section-main": "principale",
   "app-section-info": "informazioni",
   "app-section-library": "biblioteca",
