--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "前のペインに移動",
   "app-menu-new-search": "新しい検索",
   "app-menu-structured-search": "構造化された検索",
-  "app-menu-geo-search": "地理検索",
+  "app-menu-geographic-search": "地理検索",
   "app-section-main": "主要",
   "app-section-info": "情報",
   "app-section-library": "図書館",
