--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -24,7 +24,7 @@
   "app-menu-interface-language": "interfacetaal",
   "app-menu-voice": "stem",
   "app-menu-user-manual": "handleiding",
-  "app-menu-keyboard-shortcuts": "Toetsenbord sneltoetsen",
+  "app-menu-keyboard-shortcuts": "toetsenbord sneltoetsen",
   "app-menu-credits": "tegoeden",
   "app-menu-about": "over",
   "app-menu-random-topic": "willekeurig onderwerp",
@@ -62,7 +62,7 @@
   "app-menu-pitch": "toonhoogte",
   "app-menu-fullscreen-active-pane": "het actieve venster op volledig scherm weergeven",
   "app-menu-toggle-sidebar": "schakel de zijbalk in",
-  "app-menu-add-bookmark": "Voeg bladwijzer toe",
+  "app-menu-add-bookmark": "bladwijzer toevoegen",
   "app-menu-note-1": "opmerking 1: alleen beschikbaar als de focus op de zijbalk of een Wikipedia-artikelvenster ligt.",
   "app-menu-features": "functies",
   "app-menu-persona": "persona",
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "ga naar het vorige venster",
   "app-menu-new-search": "nieuwe zoekopdracht",
   "app-menu-structured-search": "gestructureerd zoeken",
-  "app-menu-geo-search": "geo zoeken",
+  "app-menu-geographic-search": "geografisch zoeken",
   "app-section-main": "voornaamst",
   "app-section-info": "informatie",
   "app-section-library": "bibliotheek",
@@ -114,7 +114,7 @@
   "app-section-education-quizzes": "quizzen",
   "app-section-science": "wetenschap",
   "app-section-science-search-tools": "zoekhulpmiddelen",
-  "app-section-science-open-journals": "geopende tijdschriften",
+  "app-section-science-open-journals": "open tijdschriften",
   "app-section-science-closed-journals": "gesloten tijdschriften",
   "app-section-science-news": "nieuws",
   "app-section-science-language": "taal",
