--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "gå til forrige rute",
   "app-menu-new-search": "nytt søk",
   "app-menu-structured-search": "strukturert søk",
-  "app-menu-geo-search": "geo søk",
+  "app-menu-geographic-search": "geo søk",
   "app-section-main": "hoved-",
   "app-section-info": "info",
   "app-section-library": "bibliotek",
