--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "ir para o painel anterior",
   "app-menu-new-search": "nova pesquisa",
   "app-menu-structured-search": "pesquisa estruturada",
-  "app-menu-geo-search": "pesquisa geográfica",
+  "app-menu-geographic-search": "pesquisa geográfica",
   "app-section-main": "principal",
   "app-section-info": "informações",
   "app-section-library": "biblioteca",
