--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "идите на претходно окно",
   "app-menu-new-search": "Нова претрага",
   "app-menu-structured-search": "структурирано претраживање",
-  "app-menu-geo-search": "гео претрага",
+  "app-menu-geographic-search": "гео претрага",
   "app-section-main": "главни",
   "app-section-info": "инфо",
   "app-section-library": "библиотека",
