--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "gå till föregående ruta",
   "app-menu-new-search": "ny sökning",
   "app-menu-structured-search": "strukturerad sökning",
-  "app-menu-geo-search": "geo sökning",
+  "app-menu-geographic-search": "geo sökning",
   "app-section-main": "huvud",
   "app-section-info": "info",
   "app-section-library": "bibliotek",
