--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "önceki bölmeye git",
   "app-menu-new-search": "yeni arama",
   "app-menu-structured-search": "yapılandırılmış arama",
-  "app-menu-geo-search": "coğrafi arama",
+  "app-menu-geographic-search": "coğrafi arama",
   "app-section-main": "ana",
   "app-section-info": "bilgi",
   "app-section-library": "kütüphane",
