--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "перейти до попередньої панелі",
   "app-menu-new-search": "новий пошук",
   "app-menu-structured-search": "структурований пошук",
-  "app-menu-geo-search": "гео пошук",
+  "app-menu-geographic-search": "гео пошук",
   "app-section-main": "основний",
   "app-section-info": "інформація",
   "app-section-library": "бібліотека",
