--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "پچھلے پین پر جائیں",
   "app-menu-new-search": "نئی تلاش",
   "app-menu-structured-search": "ساختی تلاش",
-  "app-menu-geo-search": "جیو تلاش",
+  "app-menu-geographic-search": "جیو تلاش",
   "app-section-main": "مرکزی",
   "app-section-info": "معلومات",
   "app-section-library": "کتب خانہ",
