--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "adto sa miaging pane",
   "app-menu-new-search": "bag-ong pagpangita",
   "app-menu-structured-search": "structured nga pagpangita",
-  "app-menu-geo-search": "pagpangita sa geo",
+  "app-menu-geographic-search": "pagpangita sa geo",
   "app-section-main": "nag-una",
   "app-section-info": "impormasyon",
   "app-section-library": "librarya",
