--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "přejděte na předchozí panel",
   "app-menu-new-search": "nové hledání",
   "app-menu-structured-search": "strukturované vyhledávání",
-  "app-menu-geo-search": "geografické vyhledávání",
+  "app-menu-geographic-search": "geografické vyhledávání",
   "app-section-main": "hlavní",
   "app-section-info": "info",
   "app-section-library": "knihovna",
