--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "aller au volet précédent",
   "app-menu-new-search": "nouvelle recherche",
   "app-menu-structured-search": "recherche structurée",
-  "app-menu-geo-search": "recherche géographique",
+  "app-menu-geographic-search": "recherche géographique",
   "app-section-main": "principal",
   "app-section-info": "Info",
   "app-section-library": "bibliothèque",
