--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "đi đến khung trước",
   "app-menu-new-search": "tìm kiếm mới",
   "app-menu-structured-search": "tìm kiếm có cấu trúc",
-  "app-menu-geo-search": "tìm kiếm địa lý",
+  "app-menu-geographic-search": "tìm kiếm địa lý",
   "app-section-main": "chủ yếu",
   "app-section-info": "thông tin",
   "app-section-library": "thư viện",
