--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -5,12 +5,12 @@
   "app-tab-tools-title": "Werkzeuge",
   "app-tab-settings-title": "Einstellungen",
   "app-tab-help-title": "helfen",
-  "app-tab-audio-chat-title": "Audio-Chat",
+  "app-tab-audio-chat-title": "audio-chat",
   "app-search-placeholder": "suchen",
-  "app-menu-geographic-search": "geo search",
+  "app-menu-geographic-search": "geografische suche",
   "app-menu-features": "features",
   "app-menu-nature-location-quiz": "nature location quiz",
-  "app-menu-structured-search": "Strukturierte Suche",
+  "app-menu-structured-search": "strukturierte suche",
   "app-title-occurence": "Vorkommenskarte",
   "app-title-super": "super",
   "app-title-sub": "sub",
