--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "je zuwa sashin da ya gabata",
   "app-menu-new-search": "sabon bincike",
   "app-menu-structured-search": "bincike mai tsari",
-  "app-menu-geographic-search": "geo search",
+  "app-menu-geographic-search": "binciken yanki",
   "app-section-main": "babba",
   "app-section-info": "bayani",
   "app-section-library": "ɗakin karatu",
