--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "idi na prethodno okno",
   "app-menu-new-search": "nova pretraga",
   "app-menu-structured-search": "strukturirano pretraživanje",
-  "app-menu-geographic-search": "geo pretraživanje",
+  "app-menu-geographic-search": "geografsko pretraživanje",
   "app-section-main": "glavni",
   "app-section-info": "info",
   "app-section-library": "knjižnica",
