--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -85,7 +85,7 @@
   "app-menu-goto-previous-pane": "முந்தைய பலகத்திற்குச் செல்லவும்",
   "app-menu-new-search": "புதிய தேடல்",
   "app-menu-structured-search": "கட்டமைக்கப்பட்ட தேடல்",
-  "app-menu-geographic-search": "புவி தேடல்",
+  "app-menu-geographic-search": "புவியியல் தேடல்",
   "app-section-main": "முக்கிய",
   "app-section-info": "தகவல்",
   "app-section-library": "நூலகம்",
