--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -62,13 +62,13 @@
   "app-menu-pitch": "tonehøjde",
   "app-menu-fullscreen-active-pane": "fuldskærm den aktive rude",
   "app-menu-toggle-sidebar": "skift sidebjælken",
-  "app-menu-add-bookmark": "Tilføj bogmærke",
+  "app-menu-add-bookmark": "tilføj bogmærke",
   "app-menu-note-1": "note 1: kun tilgængelig, når fokus er på sidebjælken eller en Wikipedia-artikelrude.",
   "app-menu-features": "funktioner",
   "app-menu-persona": "persona",
   "app-menu-country-select": "Land",
   "app-menu-interests": "interesser",
-  "app-menu-nature-location-quiz": "naturplaceringsquiz",
+  "app-menu-nature-location-quiz": "natur placerings quiz",
   "app-menu-command-editor": "kommando editor",
   "app-menu-presentation": "præsentation",
   "app-menu-editor": "redaktør",
