timeline presenation from Qid, ACM field update, i18n work

--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "علم المعادن",
   "app-section-science-archeology": "علم الآثار",
   "app-section-science-mathematics": "الرياضيات",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "الفلك",
   "app-section-media-datasets": "مجموعات البيانات",
   "app-section-media-datasets-general": "عام",
