--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "খনিজবিদ্যা",
   "app-section-science-archeology": "প্রত্নতত্ত্ব",
   "app-section-science-mathematics": "অংক",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "জ্যোতির্বিদ্যা",
   "app-section-media-datasets": "ডেটাসেট",
   "app-section-media-datasets-general": "সাধারণ",
