--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "minerologia",
   "app-section-science-archeology": "arqueologia",
   "app-section-science-mathematics": "matemàtiques",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
   "app-section-media-datasets": "conjunts de dades",
   "app-section-media-datasets-general": "general",
