--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralology",
   "app-section-science-archeology": "arkeolohiya",
   "app-section-science-mathematics": "matematika",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomiya",
   "app-section-media-datasets": "mga dataset",
   "app-section-media-datasets-general": "heneral",
