--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralogii",
   "app-section-science-archeology": "archeologie",
   "app-section-science-mathematics": "matematika",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomie",
   "app-section-media-datasets": "datové sady",
   "app-section-media-datasets-general": "Všeobecné",
