--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -127,6 +127,8 @@
   "app-section-science-minerology": "Mineralologie",
   "app-section-science-archeology": "Archäologie",
   "app-section-science-mathematics": "Mathematik",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "Astronomie",
   "app-section-media-datasets": "Datensätze",
   "app-section-media-datasets-general": "allgemein",
