--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -131,6 +131,8 @@
   "app-section-science-archeology": "archeology",
   "app-section-science-mathematics": "mathematics",
   "app-section-science-astronomy": "astronomy",
+  "app-section-science-physics": "physics",
+  "app-section-science-computing": "computing",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "general",
   "app-section-media-datasets-topical": "topical",
