--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralogía",
   "app-section-science-archeology": "arqueología",
   "app-section-science-mathematics": "matemáticas",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomía",
   "app-section-media-datasets": "conjuntos de datos",
   "app-section-media-datasets-general": "general",
