--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "معدن شناسی",
   "app-section-science-archeology": "باستان شناسی",
   "app-section-science-mathematics": "ریاضیات",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "ستاره شناسی",
   "app-section-media-datasets": "مجموعه داده ها",
   "app-section-media-datasets-general": "عمومی",
