--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "Minerologia",
   "app-section-science-archeology": "arkeologia",
   "app-section-science-mathematics": "matematiikka",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "tähtitiede",
   "app-section-media-datasets": "tietojoukot",
   "app-section-media-datasets-general": "yleistä",
