--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "minéralogie",
   "app-section-science-archeology": "archéologie",
   "app-section-science-mathematics": "mathématiques",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomie",
   "app-section-media-datasets": "ensembles de données",
   "app-section-media-datasets-general": "général",
