--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "ma'adinai",
   "app-section-science-archeology": "ilmin kimiya na kayan tarihi",
   "app-section-science-mathematics": "ilmin lissafi",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "ilmin taurari",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "na gaba ɗaya",
