--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "खनिज विद्या",
   "app-section-science-archeology": "पुरातत्त्व",
   "app-section-science-mathematics": "अंक शास्त्र",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "खगोल",
   "app-section-media-datasets": "डेटासेट",
   "app-section-media-datasets-general": "सामान्य",
