--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralologija",
   "app-section-science-archeology": "arheologija",
   "app-section-science-mathematics": "matematika",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomija",
   "app-section-media-datasets": "skupovi podataka",
   "app-section-media-datasets-general": "Općenito",
