--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralogia",
   "app-section-science-archeology": "archeologia",
   "app-section-science-mathematics": "matematica",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
   "app-section-media-datasets": "set di dati",
   "app-section-media-datasets-general": "generale",
