--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "鉱物学",
   "app-section-science-archeology": "考古学",
   "app-section-science-mathematics": "数学",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "天文学",
   "app-section-media-datasets": "データセット",
   "app-section-media-datasets-general": "一般的な",
