--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "광물학",
   "app-section-science-archeology": "고고학",
   "app-section-science-mathematics": "수학",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "천문학",
   "app-section-media-datasets": "데이터 세트",
   "app-section-media-datasets-general": "일반적인",
