--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "खनिजशास्त्र",
   "app-section-science-archeology": "पुरातत्व",
   "app-section-science-mathematics": "गणित",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "खगोलशास्त्र",
   "app-section-media-datasets": "डेटासेट",
   "app-section-media-datasets-general": "सामान्य",
