--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralogie",
   "app-section-science-archeology": "archeologie",
   "app-section-science-mathematics": "wiskunde",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomie",
   "app-section-media-datasets": "datasets",
   "app-section-media-datasets-general": "algemeen",
