--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "minerologi",
   "app-section-science-archeology": "arkeologi",
   "app-section-science-mathematics": "matematikk",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
   "app-section-media-datasets": "datasett",
   "app-section-media-datasets-general": "generell",
