--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralologia",
   "app-section-science-archeology": "arqueologia",
   "app-section-science-mathematics": "matemática",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomia",
   "app-section-media-datasets": "conjuntos de dados",
   "app-section-media-datasets-general": "em geral",
