--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "минералология",
   "app-section-science-archeology": "археология",
   "app-section-science-mathematics": "математика",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономия",
   "app-section-media-datasets": "наборы данных",
   "app-section-media-datasets-general": "общий",
