--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "минералологија",
   "app-section-science-archeology": "археологија",
   "app-section-science-mathematics": "математика",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономија",
   "app-section-media-datasets": "скупови података",
   "app-section-media-datasets-general": "Генерал",
