--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "madini",
   "app-section-science-archeology": "akiolojia",
   "app-section-science-mathematics": "hisabati",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "elimu ya nyota",
   "app-section-media-datasets": "seti za data",
   "app-section-media-datasets-general": "jumla",
