--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineraloloji",
   "app-section-science-archeology": "arkeoloji",
   "app-section-science-mathematics": "matematik",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
   "app-section-media-datasets": "veri kümeleri",
   "app-section-media-datasets-general": "genel",
