--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "мінералогії",
   "app-section-science-archeology": "археологія",
   "app-section-science-mathematics": "математика",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "астрономія",
   "app-section-media-datasets": "набори даних",
   "app-section-media-datasets-general": "загальний",
