--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "معدنیات",
   "app-section-science-archeology": "آثار قدیمہ",
   "app-section-science-mathematics": "ریاضی",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "فلکیات",
   "app-section-media-datasets": "ڈیٹاسیٹس",
   "app-section-media-datasets-general": "جنرل",
