--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "khoáng vật học",
   "app-section-science-archeology": "khảo cổ học",
   "app-section-science-mathematics": "toán học",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "thiên văn học",
   "app-section-media-datasets": "bộ dữ liệu",
   "app-section-media-datasets-general": "tổng quan",
