--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "minerologi",
   "app-section-science-archeology": "arkæologi",
   "app-section-science-mathematics": "matematik",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
   "app-section-media-datasets": "datasæt",
   "app-section-media-datasets-general": "generel",
