--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "mineralogi",
   "app-section-science-archeology": "arkeologi",
   "app-section-science-mathematics": "matematika",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "astronomi",
   "app-section-media-datasets": "kumpulan data",
   "app-section-media-datasets-general": "umum",
