--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -124,6 +124,8 @@
   "app-section-science-minerology": "கனிமவியல்",
   "app-section-science-archeology": "தொல்லியல்",
   "app-section-science-mathematics": "கணிதம்",
+  "app-section-science-computing": "computing",
+  "app-section-science-physics": "physics",
   "app-section-science-astronomy": "வானியல்",
   "app-section-media-datasets": "தரவுத்தொகுப்புகள்",
   "app-section-media-datasets-general": "பொது",
